# JPEG-Decoder

./: CMakeLists.txt  README.md  bitreader.h  decoder.cpp  fft.cpp  huffman.cpp  marker_readers.h  markers.h  sources.cmake  structures.h  util_funcs.h
